# video-pipeline

./: .clineignore  .clinerules  .env.example  .env.fleet.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKEND.cmd  BROWSER-OUTSEE.cmd  BROWSER-OUTSEE.ps1  BUILD-AND-START.cmd  BUILD-WEB.cmd  CHECK-ACCOUNT.cmd  CHECK-CLONE.cmd  CHECK-PROXY.cmd  CONTINUE-INSTALL.cmd  DO.cmd  DOWNLOAD-TORCH-CUDA.cmd  FIND-MY-PROJECTS.cmd  FIX-MONTAGE-NOW.cmd  FIX-MONTAGE-NOW.ps1  FIX-VERSION-LOCAL.cmd  FIX-VERSION.cmd  FIX-WORKER-NET.cmd  FLEET-AGENT-UPDATE.cmd  FLEET-DIAG.cmd  FLEET-FIX-ALL.cmd  FLEET-FIX-NOW.cmd  FLEET-HOTFIX.cmd  FLEET-NETWORK-FIX.cmd  FORCE-UPDATE.cmd  GO-11LABS-STUDIO.cmd  GO-MONTAGE-15.cmd  GO-MONTAGE-16.cmd  GO-MONTAGE-17.cmd  GO-MONTAGE-BOTH.cmd  GO.cmd  HANDOVER.md  HOW_TO_RUN.md  INSTALL-NEW-COPY.cmd  (+87 more)
.ai-orchestra-mcp/: orchestra.config.json  package-lock.json  package.json  server.js
.cursor/rules/: 00-global.mdc  10-telegram.mdc  20-bots.mdc  30-orchestrator.mdc  40-api.mdc  50-ai-agent.mdc  chatgpt-attach.mdc  studio-web-ui.mdc  video-pipeline-ops.mdc
.cursor/skills/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: bootstrap_env.py  db.py  generation_options.py  hotfix_build.py  main.py  models.py  orchestrator_api.py  project_root.py  prompts_loader.py  seed_pilot.py  settings.py  worker.py
app/ai_agent/: __init__.py  audit.py  client.py  config.py  loop.py  model_router.py  safety.py  session.py
app/bots/: browser.py  chatgpt.py  chrome_cdp.py  dolphin.py  elevenlabs.py  grsai.py  morelogin.py  outsee.py  publishers.py
app/fleet/: __init__.py  agent_actions.py  agent_loop.py  bundle.py  client.py  diagnostics.py  hub_probe.py  montage_handoff.py  montage_queue.py  network_setup.py  pipeline_list.py  pull_loop.py  push_to_hub.py  self_node.py  transfer_state.py
app/monitor/: __init__.py  __main__.py  action_tracker.py  browser_watcher.py  log_sink.py  report.py
app/orchestrator/: auto_advance.py  default_graph.py  node_registry.py  pipeline.py
app/services/: advance_runner.py  animation_prompt_gpt.py  artifact_recovery.py  asr.py  asr_audio_prep.py  assembly.py  assembly_inputs.py  audio_align_job.py  audio_align_methods.py  audio_align_run.py  audio_filters.py  auto_review.py  auto_review_validators.py  batch_autofill.py  batches.py  bgm.py  canvas_graph.py  chatgpt_xlsx.py  chrome_recovery.py  clip_fit.py  content_locks.py  default_project.py  disabled_nodes.py  elevenlabs_api.py  elevenlabs_lab_store.py  elevenlabs_voices.py  ensure_frames_from_disk.py  event_bus.py  excel_characters.py  excel_gpt_node.py  finish_missing.py  frame_audio.py  frame_skip.py  frame_timeline_sync.py  gen_queue.py  gen_queue_run.py  generation_config_presets.py  generation_storage.py  global_pause.py  gpt_check.py  (+85 more)
app/storage/: __init__.py  batch_sheet.py  mass_topics.py  plan_sheet_v8.py  project_sheet.py
app/telegram/: bot.py  callback_registry.py  global_prompts_menu.py  mass_menu.py  mass_prompt_picker.py  menu.py  (+4 more)
docker/: Dockerfile
docs/: ARCHITECTURE.md  AUTONOMOUS-AUDIT-REPORT.md  CALLBACK_INVENTORY.md  COMMANDS.md  E4_MIGRATION_GUIDE.md  FULL-VERIFICATION.md  HANDOFF-STUDIO-WEB.md  MASS_CREATION.md  MIGRATION_PROGRESS.md  PROMPTS_BLOCKS.md  QA-FINAL-REPORT.md  QA-RUN-API-2026-06-02.json  QA-RUN-FULL-2026-06-02.md  SERIES_CAMERA_ANGLES.md  SERIES_OPERATOR_CHEATSHEET.md  SERIES_PRODUCTION_PLAN.md  SERIES_XLSX_WORKBOOK.md  SPEC-RELIABILITY-QUEUE-GPT-MUSIC.md  TRIAGE_2026-05-23.md  pipeline-schema.canvas.tsx  pipeline-schema.html
fleet/: README.md  WORKER-SETUP.md  manifest.json  secrets.env.example
installer/: VideoPipelineLauncher.ps1
prompts/: OUTPUT_TEMPLATES.md  PLAN_SHORTS.v1.md  RAZBIVKA_SLOV.v1.md  SCRIPT_SHORTS.v1.md  _vars.md  active_variants.json  voices.json
scripts/: Continue-Install.ps1  Diagnose-Chrome.ps1  Discover-FleetHub.ps1  Dump-Recovered-Voiceovers.ps1  EXPORT-FULL-BACKUP.cmd  FLEET-HOTFIX.ps1  Fix-StudioVersion160.ps1  FleetEnv.ps1  Go-Studio.ps1  Install-NewPc.ps1  Otpravit-17.ps1  Proverit-Handoff-Hub.ps1  Pull-Hotfix-Safe.ps1  Recover-VoiceoverFromRecycleBin.ps1  Repair-Montage-Hub.ps1  Restore-Chrome-Profile.ps1  Restore-Ui.ps1  Return-PromptsFromStash.ps1  Set-FleetEnv.ps1  Setup-FleetWorker.ps1  Start-ChromeCDP.ps1  StudioUpdateCore.ps1  Update-Hotfix-FromGitHub.ps1  Update-Studio.ps1  Verify-Fleet.ps1  VpBrowserProfile.ps1  VpWebBind.ps1  Zabrat-S-Nucbox.ps1  Zalit-Hotfix-Na-Hub.ps1  __init__.py  _do_git_push.cmd  _do_git_push.ps1  ai_dump.py  allow-studio-firewall.ps1  assemble_r15_direct.py  audit_buttons.py  bootstrap-fleet-worker.ps1  bump-studio-version.ps1  bump_studio_version.py  cb_inventory.py  (+65 more)
templates/: project_template.xlsx  project_template_series_v1.xlsx  project_template_v8.xlsx
tests/: conftest.py  test_ai_agent_handler.py  test_ai_agent_hitl_flow.py  test_ai_agent_loop.py  test_ai_agent_safety.py  test_ai_agent_smoke.py  test_ai_agent_tools.py  test_ai_autoreply_filter.py  test_all_callbacks_in_cb_registry.py  test_anim_pr_two_phase.py  test_animation_prompt_gpt.py  test_artifact_recovery_newer_disk.py  test_asr_backend.py  test_assemble_align_cells.py  test_assemble_no_autorun.py  test_assembly_subtitles.py  test_assembly_sync.py  test_audio_align_db_lock.py  test_audio_align_methods.py  test_audio_filters.py  test_audio_paths.py  test_audit_buttons.py  test_auto_advance_noderun_restart.py  test_auto_advance_order.py  test_auto_advance_parity.py  test_auto_mode_no_autostart.py  test_batch_autofill.py  test_batch_pause_resume.py  test_batch_sheet_duration_columns.py  test_batches_inheritance.py  test_bgm.py  test_bootstrap_env.py  test_bot_error_detectors.py  test_browser_tab_reuse.py  test_callback_registry.py  test_canvas_graph.py  test_canvas_node_merge.py  test_cb_inventory.py  test_cdp_autostart_policy.py  test_chatgpt_attachment_guard.py  (+195 more)
web/: .gitignore  STUDIO_VERSION  VideoPipelineStudio.cmd  VideoPipelineStudio.ps1  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
(+687 files in other folders)
