[project]
name = "video-pipeline"
version = "0.1.0"
description = "Автоматический конвейер генерации коротких вертикальных роликов (60-75 сек)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "aiogram>=3.10,<4",
  "aiohttp>=3.10,<4",
  "aiohttp-socks>=0.10,<1",
  "aiosqlite>=0.20,<1",
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "faster-whisper>=1.0,<2",
  "ffmpeg-python>=0.2,<1",
  "greenlet>=3.0,<4",
  "jinja2>=3.1,<4",
  "loguru>=0.7,<1",
  "openpyxl>=3.1,<4",
  "playwright>=1.48,<2",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "python-dateutil>=2.9,<3",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0,<3",
  "sse-starlette>=2.1,<3",
  "tenacity>=9.0,<10",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.12",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "E501",   # line too long — иногда необходимо для длинных URL/SQL
  "SIM102", # collapsible-if — в выразительном коде nested if часто читаемее
  "SIM103", # needless-bool — иногда явный return для читаемости
  "SIM105", # use contextlib.suppress — частый legitimate паттерн try/except: pass,
            # особенно вокруг Playwright/network/Telegram, где исключения ожидаемы
  "SIM108", # if-else-block-instead-of-if-exp — ternary не всегда читаемее
  "SIM110", # reimplemented-builtin — иногда явный цикл понятнее any()/all()
  "SIM117", # nested with — иногда читаемее nested чем длинная одна строка
  "UP042",  # replace-str-enum: в app/models.py много `class X(str, enum.Enum)`,
            # их значения уже persisted в SQLite, миграция рискованна (фаза refactor)
  "B007",   # unused-loop-control-variable — иногда переменная для будущего use
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# ───── Mypy ─────────────────────────────────────────────────────────────────
# Стратегия: новые модули — strict. Старый код (bot.py, models.py, bots/,
# orchestrator/) — warn-mode через ignore_errors.
[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "app.ai_agent.*",
    "app.telegram.callback_registry",
    "app.telegram.keyboards.*",
    "app.telegram.handlers.ai_agent",
    "app.telegram.handlers.debug",
    "scripts.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
    "app.models",
    "app.main",
    "app.worker",
    "app.bots.*",
    "app.orchestrator.*",
    "app.telegram.bot",
    "app.telegram.menu",
    "app.telegram.mass_menu",
    "app.telegram.wizard",
    "app.telegram.prompt_picker",
    "app.telegram.mass_prompt_picker",
    "app.telegram.test_prompt_menu",
    "app.services.*",
    "app.storage.*",
    "app.orchestrator_api",
    "app.prompts_loader",
    "app.settings",
    "app.db",
    "app.generation_options",
    "app.seed_pilot",
    "cleanup_hero_v3",
    "import_from_xlsx",
    "recover_project_state",
]
disallow_any_generics = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "aiohttp_socks",
    "ffmpeg",
    "faster_whisper",
    "openpyxl.*",
    "playwright.*",
    "uvicorn.*",
    "alembic.*",
]
ignore_missing_imports = true
